# Ticket-System

./: CMakeLists.txt  README.md  main.cpp
Bpt/: Bplustree.h  CMakeLists.txt  a.out  bok.cpp  cache.cpp  chk.sh  dat  del  del.cpp  disk  doc.md  gen  gen.cpp  gen2.cpp  gen3.cpp  in.txt  in1.txt  input.txt  main  main.cpp  make.cpp  man(1).cpp  mk.out  ori.cpp  page.txt  page2.txt  run.sh  std.out  test  test.cpp  test.in  test.out  test.sh  tmp.txt  tst.out
Bpt/.cache/clangd/index/: Bplustree.h.083887A1DA30D649.idx  main.cpp.04100A4AE64C86E7.idx  main.cpp.1E4FAA23DD80ED7E.idx  sjtu.h.0FEBEB5F4CDBCFD6.idx
include/: bplustree.hpp  config.h  exceptions.hpp  mainsystem.cpp  mainsystem.hpp  map.hpp  pair.hpp  string.hpp  ticket.cpp  ticket.hpp  train.cpp  train.hpp  trainsystem.cpp  trainsystem.hpp  transfer_v2.cpp  user.cpp  user.hpp  usersystem.cpp  usersystem.hpp  vector.hpp
